*******************************************************************************
Version 1.6.11
*******************************************************************************

2011-01-14 Chandra Penke <chandrapenke(at)mcntech.com>

	Minor change in membuffer.c to include "membuffer.h" without looking
	in the standard header path. This allows pupnp to build in xcode.

2010-12-18 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	SF Tracker: Patches
	Fedora mingw32 compilation - ID: 3138849
	Details:
	Hello. I trying compile libupnp-1.6.10 on the Fedora 14 MinGW
	Environment and get many errors. I create patch to fix it. With this
	patch i can get static library. This patch is very raw.

	Submitted: Ivan Romanov (ivanromanov) - 2010-12-16 23:29:19 UTC

*******************************************************************************
Version 1.6.10
*******************************************************************************

2010-11-23 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Major bug fix in http_SendMessage.

	Currently, http_SendMessage was not able to write to write a buffer
	due to a bad use of file_buf instead of buf. This bug was introduced by
	the 0197-Doxygen-reformating-compiler-warnings patch.

2010-11-23 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Returning the Sid in Upnp_Event_Subscribe.

	Currently, Upnp_Event_Subscribe always contains an empty chain in the
	Sid parameter. This patch now saves the client Subscription ID in this
	parameter so Control Points can see and use the same SID in the
	Upnp_Event_Subscribe and in the Upnp_Event structures.

2010-11-22 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Two fixes from Juergen Lock <nox(at)jelal.kn-bremen.de>:

1. varargs:  pass size of CRLF as size_t not as int:

--- upnp/src/gena/gena_device.c.orig
+++ upnp/src/gena/gena_device.c
@@ -225,7 +225,7 @@ static UPNP_INLINE int notify_send_and_r
		"bbb",
		start_msg.buf, start_msg.length,